--- a/Searching.for.jobs.html
+++ b/Searching.for.jobs.html
@@ -38,7 +38,7 @@ body {font-size:16px;}
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">My Portfolio</a>
     <a href="https://chatgpt.com" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">ChatGPT</a>
 
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cover letter</a>
+    <a href="https://samerguda.github.io/-cover.letter.mechanical.manager/cover.letter.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cover letter Mechanical manager</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Linkedin</a>
     <a href="https://samerguda.github.io/Logos/logos.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">LOGOS</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
