--- a/Searching.for.jobs.html
+++ b/Searching.for.jobs.html
@@ -51,7 +51,7 @@ body {font-size:16px;}
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="https://samerguda.github.io/Front-End-Developer-Presentation/Front-End.Developer.Presentation.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Front-End.Developer.Presentation</a>
   
   </div>
 </nav>
