--- a/Searching.for.jobs.html
+++ b/Searching.for.jobs.html
@@ -43,6 +43,23 @@ body {font-size:16px;}
     <a href="https://samerguda.github.io/Logos/logos.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">LOGOS</a>
     <a href="https://samerguda.github.io/MY-SOCIAL-NETWORKS-Samer-Alsaadni/my_connections/SamerAlsaadniportoflio.html#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">MY-SOCIAL-NETWORKS</a>
     <a href="https://samerguda.github.io/Websites.to.create.CV/10.free.websites.to.create.cv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">10.free.websites.to.create.cv</a>
+    <a href="https://samerguda.github.io/copy.personal.informaiton.cv/copy.personal.informaiton.cv.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">copy.personal.informaiton.cv</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
