--- a/Searching.for.jobs.html
+++ b/Searching.for.jobs.html
@@ -48,7 +48,7 @@ body {font-size:16px;}
     <a href="https://samerguda.github.io/Profile.mechanical/Profile.mechanical.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Profile.mechanical</a>
     <a href="https://samerguda.github.io/profile.electromechanical.manager/profile.electromechanical.manager.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">profile.electromechanical.manager</a>
     <a href="https://samerguda.github.io/profile.mechanical.manager/profile.mechanical.manager.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">profile.mechanical.manager</a>
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="https://samerguda.github.io/profile.construction.manager/profile.construction.manager.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">profile.construction.manager</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
